--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "reddb"
 version = "0.1.0"
-authors = ["Igor Sapego <igorsapg@gmail.com>"]
+authors = ["Igor Sapego <igorsapg@gmail.com>" "Alexander Ovchinnikov <Alexander.Ovchinnikof@gmail.com>"]
 
 [dependencies]
 skiplist = "*"
